RESOLVED FIXED273710
REGRESSION (278276@main): Crash when collecting Transparent DocumentMarkers.
https://bugs.webkit.org/show_bug.cgi?id=273710
Summary REGRESSION (278276@main): Crash when collecting Transparent DocumentMarkers.
Megan Gardner
Reported 2024-05-03 14:29:20 PDT
Transparent DocumentMarkers need to be seperate to work with selection.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-03 14:29:33 PDT
Megan Gardner
Comment 2 2024-05-03 14:43:19 PDT
EWS
Comment 3 2024-05-03 20:33:44 PDT
Committed 278363@main (585ea5ce731b): <https://commits.webkit.org/278363@main> Reviewed commits have been landed. Closing PR #28124 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.