REGRESSION (278276@main): Crash when collecting Transparent DocumentMarkers. https://bugs.webkit.org/show_bug.cgi?id=273710 rdar://127511853

Reviewed by Wenson Hsieh.

Original implementation of transparent document markers
was incorrect and resulted in a WebProcess crash. They
need to be closer to draggedContent markers (which I hope
to combine them with someday) and be gathered and added
separately so they can work with selection.

* Source/WebCore/dom/DocumentMarkerController.cpp:
(WebCore::shouldInsertAsSeparateMarker):
* Source/WebCore/rendering/MarkedText.cpp:
(WebCore::MarkedText::collectForDocumentMarkers):
(WebCore::MarkedText::collectForDraggedAndTransparentType):
(WebCore::MarkedText::collectForDraggedContent): Deleted.
* Source/WebCore/rendering/MarkedText.h:
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::RenderText::contentRangesBetweenOffsetsForType const):
(WebCore::RenderText::draggedContentRangesBetweenOffsets const): Deleted.
* Source/WebCore/rendering/RenderText.h:
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter<TextBoxPath>::paintForegroundAndDecorations):
(WebCore::TextBoxPainter<TextBoxPath>::paintForeground):

Canonical link: https://commits.webkit.org/278363@main