Source/WebCore/dom/DocumentMarkerController.cpp
@@ -258,8 +258,9 @@ static bool shouldInsertAsSeparateMarker(const DocumentMarker& marker)
     case DocumentMarker::Type::UnifiedTextReplacement:
         return true;
 #endif
-
     case DocumentMarker::Type::TransparentContent:
+        return true;
+
     case DocumentMarker::Type::DraggedContent:
         return is<RenderReplaced>(std::get<RefPtr<Node>>(marker.data())->renderer());
 
